# writ

./: .gdbinit  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-run-gdb  error_handler.py  json_utils.py  parse_input.py  parse_json.py  requirements.txt  setup.cfg  test.py  validate.py  writ  writ-docker  writ.py
.github/workflows/: ci.yaml
data/: run.sh
data/expected/: expected.c  expected.h  expected.wasm  expected.wit
data/hilbert/: hilbert.wit
data/int/: power.wit
data/list_int/: sum.c
data/list_record/: list_record.wasm  list_record.wit
data/list_string/: sum.c  sum.wit
docker/: Dockerfile  docker-run-gdb
examples/: test.sh
examples/expected/: Cargo.toml  expected.h
examples/float/: power.h  power.wit
examples/hilbert/: hilbert.wit
examples/int/: power.c  power.h
examples/list_int/: sum.h  sum.wasm
examples/list_string/: sum.c  sum.h
examples/record/: record.wit
examples/sentiment/: sentiment.wit
examples/string/: split.cpp  split.h
src/: error_handler.py  json_utils.py  parse_input.py  validate.py  writ
test/: run.sh
test/binds/: deeparg_export_bindings.py  deeparg_import_bindings.py  hilbert_export_bindings.py  hilbert_import_bindings.py  mult_export_bindings.py  mult_import_bindings.py  passthru_export_bindings.py  passthru_import_bindings.py  tokenize_export_bindings.py  tokenize_import_bindings.py
test/float/: export_bindings.py  power.c  power.h  power.wasm  power.wit
test/hilbert/: hilbert.wit
test/int/: power.c  power.wasm  power.wit
test/list_int/: sum.h  sum.wit
(+26 files in other folders)
