[metadata]
name = writ
version = 0.1.0
description = WASI Reactor Interface Tester
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/writ
author = SingleStore
author_email = support@singlestore.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database

[options]
packages = find:
install_requires =
    wasmtime
python_requires = >=3.7
tests_require = 
  nose2

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
source_pkgs = src

[coverage:report]
omit =
    setup.py
    */examples/*
    */test/*
